--- a/src/fonts.css
+++ b/src/fonts.css
@@ -2,7 +2,23 @@
 
 @font-face {
   font-family: 'Aeonik';
-  src: url('./fonts/Aeonik-Regular.ttf') format('truetype');
+  src: url('./fonts/AeonikTRIAL-Light.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Aeonik';
+  src: url('./fonts/AeonikTRIAL-LightItalic.otf') format('opentype');
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Aeonik';
+  src: url('./fonts/AeonikTRIAL-Regular.otf') format('opentype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -10,10 +26,44 @@
 
 @font-face {
   font-family: 'Aeonik';
-  src: url('./fonts/Aeonik-Bold.ttf') format('truetype');
+  src: url('./fonts/AeonikTRIAL-RegularItalic.otf') format('opentype');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Aeonik';
+  src: url('./fonts/AeonikTRIAL-Bold.otf') format('opentype');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
+}
+
+@font-face {
+  font-family: 'Aeonik';
+  src: url('./fonts/AeonikTRIAL-BoldItalic.otf') format('opentype');
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+
+/* Global background and overscroll settings */
+html {
+  background-color: #F6F7F9;
+  min-height: 100%;
+}
+
+body {
+  background-color: #F6F7F9;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+}
+
+#root {
+  background-color: #F6F7F9;
+  min-height: 100vh;
 }
 
 /* Global font settings */
